fix: tailwindcss & utilities specific issues
*** broken focus colors in theme

Issue comes from the way rgb colors get loaded, e.g.:
rgba(var(--piccolo), .13) → rgba(12 32 42, .13)

What we want is rgba(12, 32, 42, .13).

NB: this still breaks on colors with default transparency, e.g.:
rgba(12 32 42 / 20, .13) we can’t apply transparency twice.

*** twMerge not behaving properly

twMerge has no way of knowing by default if `text-moon-32` is a font or
a font size, this commit fixes it by extending it’s default config (see
cn utility file).

--- a/tailwindcss/themes/empire.css
+++ b/tailwindcss/themes/empire.css
@@ -2,53 +2,53 @@
 
 :root.theme-empire-light,
 .theme-empire-light {
-  --piccolo: 255 37 168; /* #ff25a8 */
-  --hit: 184 166 255; /* #b8a6ff */
-  --beerus: 229 228 234; /* #e5e4ea */
-  --gohan: 240 238 245; /* #f0eef5 */
-  --goten: 255 255 255; /* #ffffff */
-  --goku: 255 255 255; /* #ffffff */
-  --bulma: 21 6 79; /* #15064f */
-  --trunks: 92 86 113; /* #5c5671 */
-  --popo: 0 0 0; /* #000000 */
+  --piccolo: 255, 37, 168; /* #ff25a8 */
+  --hit: 184, 166, 255; /* #b8a6ff */
+  --beerus: 229, 228, 234; /* #e5e4ea */
+  --gohan: 240, 238, 245; /* #f0eef5 */
+  --goten: 255, 255, 255; /* #ffffff */
+  --goku: 255, 255, 255; /* #ffffff */
+  --bulma: 21, 6, 79; /* #15064f */
+  --trunks: 92, 86, 113; /* #5c5671 */
+  --popo: 0, 0, 0; /* #000000 */
   --jiren: 255 37 168 / 0.12; /* #ff25a8 */
   --heles: 0 0 0 / 0.08; /* #000000 */
   --zeno: 0 0 0 / 0.56; /* #000000 */
 
   /* support-colors  */
-  --krillin: 255 180 53; /* #ffb319 */
+  --krillin: 255, 180, 53; /* #ffb319 */
   --krillin-60: 255 180 53 / 0.56; /* #ffb319 */
   --krillin-10: 255 180 53 / 0.08; /* #ffb319 */
 
-  --chichi: 250 76 128; /* #ff4e64 */
+  --chichi: 250, 76, 128; /* #ff4e64 */
   --chichi-60: 250 76 128 / 0.56; /* #ff4e64 */
   --chichi-10: 250 76 128 / 0.08; /* #ff4e64 */
 
-  --roshi: 65 217 185; /* #41d9b9 */
+  --roshi: 65, 217, 185; /* #41d9b9 */
   --roshi-60: 65 217 185 / 0.56; /* #41d9b9 */
   --roshi-10: 65 217 185 / 0.08; /* #41d9b9 */
 
-  --dodoria: 211 48 48; /* #d33030 */
+  --dodoria: 211, 48, 48; /* #d33030 */
   --dodoria-60: 211 48 48 / 0.56; /* #d33030 */
   --dodoria-10: 211 48 48 / 0.08; /* #d33030 */
 
-  --cell: 10 183 88; /* #0ab758 */
+  --cell: 10, 183, 88; /* #0ab758 */
   --cell-60: 10 183 88 / 0.56; /* #0ab758 */
   --cell-10: 10 183 88 / 0.08; /* #0ab758 */
 
-  --raditz: 179 128 74; /* #b3804a */
+  --raditz: 179, 128, 74; /* #b3804a */
   --raditz-60: 179 128 74 / 0.56; /* #b3804a */
   --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
-  --whis: 52 72 240; /* #3448f0 */
+  --whis: 52, 72, 240; /* #3448f0 */
   --whis-60: 52 72 240 / 0.56; /* #3448f0 */
   --whis-10: 52 72 240 / 0.08; /* #3448f0 */
 
-  --frieza: 92 51 207; /* #5c33cf */
+  --frieza: 92, 51, 207; /* #5c33cf */
   --frieza-60: 92 51 207 / 0.56; /* #5c33cf */
   --frieza-10: 92 51 207 / 0.08; /* #5c33cf */
 
-  --nappa: 114 85 80; /* #725550 */
+  --nappa: 114, 85, 80; /* #725550 */
   --nappa-60: 114 85 80 / 0.56; /* #725550 */
   --nappa-10: 114 85 80 / 0.08; /* #725550 */
 
@@ -82,53 +82,53 @@
 
 :root.theme-empire-dark,
 .theme-empire-dark {
-  --piccolo: 255 37 168; /* #ff25a8 */
-  --hit: 184 166 255; /* #b8a6ff */
-  --beerus: 101 74 206; /* #654ace */
-  --gohan: 72 40 197; /* #4828c5 */
-  --goten: 255 255 255; /* #ffffff */
-  --goku: 21 6 79; /* #15064f */
-  --bulma: 255 255 255; /* #ffffff */
-  --trunks: 200 190 238; /* #c8befe */
-  --popo: 0 0 0; /* #000000 */
+  --piccolo: 255, 37, 168; /* #ff25a8 */
+  --hit: 184, 166, 255; /* #b8a6ff */
+  --beerus: 101, 74, 206; /* #654ace */
+  --gohan: 72, 40, 197; /* #4828c5 */
+  --goten: 255, 255, 255; /* #ffffff */
+  --goku: 21, 6, 79; /* #15064f */
+  --bulma: 255, 255, 255; /* #ffffff */
+  --trunks: 200, 190, 238; /* #c8befe */
+  --popo: 0, 0, 0; /* #000000 */
   --jiren: 255 37 168 / 0.12; /* #ff25a8 */
   --heles: 0 0 0 / 0.08; /* #000000 */
   --zeno: 0 0 0 / 0.56; /* #000000 */
 
   /* support-colors  */
-  --krillin: 255 180 53; /* #ffb319 */
+  --krillin: 255, 180, 53; /* #ffb319 */
   --krillin-60: 255 180 53 / 0.56; /* #ffb319 */
   --krillin-10: 255 180 53 / 0.08; /* #ffb319 */
 
-  --chichi: 250 76 128; /* #ff4e64 */
+  --chichi: 250, 76, 128; /* #ff4e64 */
   --chichi-60: 250 76 128 / 0.56; /* #ff4e64 */
   --chichi-10: 250 76 128 / 0.08; /* #ff4e64 */
 
-  --roshi: 65 217 185; /* #41d9b9 */
+  --roshi: 65, 217, 185; /* #41d9b9 */
   --roshi-60: 65 217 185 / 0.56; /* #41d9b9 */
   --roshi-10: 65 217 185 / 0.08; /* #41d9b9 */
 
-  --dodoria: 211 48 48; /* #d33030 */
+  --dodoria: 211, 48, 48; /* #d33030 */
   --dodoria-60: 211 48 48 / 0.56; /* #d33030 */
   --dodoria-10: 211 48 48 / 0.08; /* #d33030 */
 
-  --cell: 10 183 88; /* #0ab758 */
+  --cell: 10, 183, 88; /* #0ab758 */
   --cell-60: 10 183 88 / 0.56; /* #0ab758 */
   --cell-10: 10 183 88 / 0.08; /* #0ab758 */
 
-  --raditz: 179 128 74; /* #b3804a */
+  --raditz: 179, 128, 74; /* #b3804a */
   --raditz-60: 179 128 74 / 0.56; /* #b3804a */
   --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
-  --whis: 52 72 240; /* #3448f0 */
+  --whis: 52, 72, 240; /* #3448f0 */
   --whis-60: 52 72 240 / 0.56; /* #3448f0 */
   --whis-10: 52 72 240 / 0.08; /* #3448f0 */
 
-  --frieza: 92 51 207; /* #5c33cf */
+  --frieza: 92, 51, 207; /* #5c33cf */
   --frieza-60: 92 51 207 / 0.56; /* #5c33cf */
   --frieza-10: 92 51 207 / 0.08; /* #5c33cf */
 
-  --nappa: 114 85 80; /* #725550 */
+  --nappa: 114, 85, 80; /* #725550 */
   --nappa-60: 114 85 80 / 0.56; /* #725550 */
   --nappa-10: 114 85 80 / 0.08; /* #725550 */
   
