--- a/tailwindcss/themes/lab.css
+++ b/tailwindcss/themes/lab.css
@@ -2,53 +2,53 @@
 
 :root.theme-lab-light,
 .theme-lab-light {
-  --piccolo: 32 36 38; /* #202426 */
-  --hit: 255 92 111; /* #ff5c6f */
-  --beerus: 220 225 229; /* #dce1e5 */
-  --gohan: 243 245 246; /* #f3f5f6 */
-  --goten: 255 255 255; /* #ffffff */
-  --goku: 255 255 255; /* #ffffff */
-  --bulma: 32 36 38; /* #202426 */
-  --trunks: 134 151 162; /* #8697a2 */
-  --popo: 32 36 38; /* #202426 */
+  --piccolo: 32, 36, 38; /* #202426 */
+  --hit: 255, 92, 111; /* #ff5c6f */
+  --beerus: 220, 225, 229; /* #dce1e5 */
+  --gohan: 243, 245, 246; /* #f3f5f6 */
+  --goten: 255, 255, 255; /* #ffffff */
+  --goku: 255, 255, 255; /* #ffffff */
+  --bulma: 32, 36, 38; /* #202426 */
+  --trunks: 134, 151, 162; /* #8697a2 */
+  --popo: 32, 36, 38; /* #202426 */
   --jiren: 32 36 38 / 0.08; /* #ff25a8 */
   --heles: 0 0 0 / 0.12; /* #000000 */
   --zeno: 32 36 38 / 0.4; /* #ff25a8 */
 
   /* support-colors  */
-  --krillin: 255 179 25; /* #ffb319 */
+  --krillin: 255, 179, 25; /* #ffb319 */
   --krillin-60: 255 179 25  / 0.56; /* #ffb319 */
   --krillin-10: 255 179 25 / 0.08; /* #ffb319 */
 
-  --chichi: 255 78 100; /* #ff4e64 */
+  --chichi: 255, 78, 100; /* #ff4e64 */
   --chichi-60: 255 78 100 / 0.56; /* #ff4e64 */
   --chichi-10: 255 78 100 / 0.08; /* #ff4e64 */
 
-  --roshi: 74 209 95; /* #4ad15f */
+  --roshi: 74, 209, 95; /* #4ad15f */
   --roshi-60: 74 209 95 / 0.56; /* #4ad15f */
   --roshi-10: 74 209 95 / 0.08; /* #4ad15f */
 
-  --dodoria: 211 48 48; /* #d33030 */
+  --dodoria: 211, 48, 48; /* #d33030 */
   --dodoria-60: 211 48 48 / 0.56; /* #d33030 */
   --dodoria-10: 211 48 48 / 0.08; /* #d33030 */
 
-  --cell: 149 241 213; /* #95f1d5 */
+  --cell: 149, 241, 213; /* #95f1d5 */
   --cell-60: 149 241 213 / 0.56; /* #95f1d5 */
   --cell-10: 149 241 213 / 0.08; /* #95f1d5 */
 
-  --raditz: 179 128 74; /* #b3804a */
+  --raditz: 179, 128, 74; /* #b3804a */
   --raditz-60: 179 128 74 / 0.56; /* #b3804a */
   --raditz-10: 179 128 74 / 0.08; /* #b3804a */
 
-  --whis: 52 72 240; /* #3448f0 */
+  --whis: 52, 72, 240; /* #3448f0 */
   --whis-60: 52 72 240 / 0.56; /* #3448f0 */
   --whis-10: 52 72 240 / 0.08; /* #3448f0 */
 
-  --frieza: 92 51 207; /* #5c33cf */
+  --frieza: 92, 51, 207; /* #5c33cf */
   --frieza-60: 92 51 207 / 0.56; /* #5c33cf */
   --frieza-10: 92 51 207 / 0.08; /* #5c33cf */
 
-  --nappa: 114 85 80; /* #725550 */
+  --nappa: 114, 85, 80; /* #725550 */
   --nappa-60: 114 85 80 / 0.56; /* #725550 */
   --nappa-10: 114 85 80 / 0.08; /* #725550 */
 
